# Payload_Estimator_RLS

./: .gitignore  2025-08-16-17-53-14.bag
src/: CMakeLists.txt  main.cpp  package.xml
src/common/: log.h
src/kdl_solver/: kdl_solver.cpp  kdl_solver.h
src/launch/: payload_estimator.launch  payload_estimator_gdb.launch
src/msg/: ArmJointState.msg  Debug.msg  PayloadDebug.msg
src/payload_estimator/: payload_estimator.cpp  payload_estimator.h  payload_estimator0820_bk.cpp  payload_rls.h
src/urdf/: y10804.urdf
