<?xml version="1.0"?>
<package format="2">
  <name>payload_estimator</name>
  <version>0.0.1</version>
  <description>payload estimator</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- <depend>roscpp</depend> -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  
  <export>
  </export>
</package>
